--- a/cyclope/apps/feeds/templates/feeds/feed_detail.html
+++ b/cyclope/apps/feeds/templates/feeds/feed_detail.html
@@ -12,7 +12,8 @@
 
   <!-- herramientas -->
   {% include 'cyclope/content_tools_block.html' %}
-
+  
+  {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
   <!-- descripcion -->
   {% if feed.summary %}
   <h3 class="summary">{{ feed.summary|smart_style }}</h3>
@@ -32,6 +33,28 @@
     <a class="btn btn-primary" href="{{ entry.link }}">{% trans "More" %}</a>
   </div>
   {% endfor %}
+
+   {% elif CYCLOPE_THEME_TYPE == 'classic' %}
+    <!-- descripcion -->
+  {% if feed.summary %}
+  <div class="summary">{{ feed.summary|smart_style }}</div>
+  {% endif%}
+  <!-- /descripcion -->
+
+  {% for entry in entries %}
+  <div class="text html-text html-content">
+      <h2><a href="{{ entry.link }}">{{ entry.title }}</a></h2>
+      {% if not view_options.titles_only %}
+        {% if entry.summary_detail.type == 'text/html' %}
+          {{ entry.summary_detail.value|safe }}
+        {% else %}
+          {{ entry.summary_detail.value }}
+        {% endif %}
+      {% endif %}
+  </div>
+  {% endfor %}
+  
+   {% endif %}
 
   <div class="meta-content">{% include 'collections/categories_navigation_block.html' %}</div>
 
