--- a/cyclope/templates/cyclope/author_detail.html
+++ b/cyclope/templates/cyclope/author_detail.html
@@ -3,32 +3,38 @@
 {% load i18n fb_versions cyclope_utils dbgettext_tags %}
 
 {% block content %}
-
+{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
 <div class="well content-view authors detail authors-detail">
         <center>
-      
-         {% if current_object.image %}
-          <div class="media-content">
-            <img src="{% version current_object.image.path 'small' %}" name="aboutme" class="img-circle"/>
-          </div>
-          {% endif %}
-           
-
-        <h2>{{ current_object.name }}</h2>
-       
-
-  {% if current_object.notes %}
-  <div class="notes">{{ current_object.notes|smart_style }}</div>
-  {% endif %}
-     {% if current_object.origin %}
-  <div class="origin">{{ current_object.origin }}</div>
-  {% endif %}
-
-		</center>
-        
+            {% if current_object.image %}
+            <div class="media-content">
+                <img src="{% version current_object.image.path 'small' %}" name="aboutme" class="img-circle"/>
+            </div>
+            {% endif %}
+            <h2>{{ current_object.name }}</h2>
+            {% if current_object.notes %}
+            <div class="notes">{{ current_object.notes|smart_style }}</div>
+            {% endif %}
+            {% if current_object.origin %}
+            <div class="origin">{{ current_object.origin }}</div>
+            {% endif %}
+        </center>
     </div>
-  
+{% elif CYCLOPE_THEME_TYPE == 'classic' %}
+<div class="content-view authors detail authors-detail">
+    <h1 class="title">{{ current_object.name }}</h1>
+    {% if current_object.image %}
+    <div class="media-content">
+        <img src="{% version current_object.image.path 'croppedthumbnail' %}" />
+    </div>
+    {% endif %}
+    {% if current_object.origin %}
+    <div class="origin">{{ current_object.origin }}</div>
+    {% endif %}
+    {% if current_object.notes %}
+    <div class="notes">{{ current_object.notes|smart_style }}</div>
+    {% endif %}
+</div>
+{% endif %}
 {% include "cyclope/authored_content_block.html" %}
-    
-
 {% endblock content%}
