--- a/cyclope/templates/cyclope/author_block.html
+++ b/cyclope/templates/cyclope/author_block.html
@@ -4,9 +4,15 @@
 {% with author_url=author.get_absolute_url %}
 {% if author %}
 <div class="author-container meta-content">
-  <h4  class="author">
-   <a href="#author">{% trans "By" %} {{ author }}</a>
-   </h4>
+    {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
+    <h4  class="author">
+        <a href="#author">{% trans "By" %} {{ author }}</a>
+    </h4>
+    {% elif CYCLOPE_THEME_TYPE == 'classic' %}
+    <h4  class="author">{% if author_url %}
+        <a href='{{ author_url }}'>{% endif %}{% trans "By" %} {{ author }}{% if author_url %}</a>{% endif %}
+    </h4>
+    {% endif %}
 </div>
 {% endif %}
 {% endwith %}
