--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -5,11 +5,12 @@
 
  
   <h2 class="title">
+		{% if CYCLOPE_THEME_TYPE == 'classic' %}<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />{% endif %}
 
-  <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
+		<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
   </h2>
 
-    {% if current_object.image %}
+  {% if current_object.image %}
       <div class="teaser_icon_container media-content">
       <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
         <img class="teaser_icon img-responsive" src="{% version current_object.image.path 'small' %}" border="0"/>
@@ -17,19 +18,21 @@
     </div>
   {% endif %}
 
-  {% if current_object.description %}
-  <div class="html-content summary">{{ current_object.description|smart_style }}
-   {% block player %}
-  {% endblock %}
-   </div>
-   {% endif %}
-  
-  {% include "cyclope/author_block_teaser.html" with author=current_object.author %}
-   <p class="teaser_more center-block">
-   <a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a>
-   {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
-   <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
-   </p>
+		{% if current_object.description %}
+			<div class="html-content summary">{{ current_object.description|smart_style }}
+			{% block player %}
+			{% endblock player %}
+		 </div>
+		 {% endif %}
+		
+		{% include "cyclope/author_block_teaser.html" with author=current_object.author %}
+		 <p class="teaser_more center-block">
+		 <a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">{% trans "More" %}</a>
+		 {% include "cyclope/teaser_tools_block.html" with current_object=categorization.content_object %}
+		 {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />{% endif %}
+		 </p>
+
+   
   <div class="clear"></div>
 </div>
 {% endblock content%}
